objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Checked_Timestamp__c</fullName>
        <label>ACH Checked Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACH_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALERT_STATUS_CHANGED__c</fullName>
        <formula>If(Not(IsBlank(Alert_Project_Status_Changed__c))=True, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 12, 12) + &apos;&apos;+UPPER(Alert_Project_Status_Changed__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ALERT: STATUS CHANGED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Approval_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger field to enter ASR approval process</description>
        <label>ASR Approval Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATM_Function__c</fullName>
        <label>ATM Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accel_Employee_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accel Employee Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accel_Establishment_Type__c</fullName>
        <formula>TEXT( Account__r.Location_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Establishment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accel_Go_Live_Date2__c</fullName>
        <formula>Account__r.Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accel_Go_Live_Date__c</fullName>
        <label>Accel Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accel_SGI_Submission__c</fullName>
        <inlineHelpText>Tom&apos;s Intralot Submission</inlineHelpText>
        <label>Accel SGI Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accel_Submitted_to_SGI_Date__c</fullName>
        <label>Accel Submitted to SGI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accepted_As__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Borderline&quot;),&quot;Borderline&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Company Generated&quot;),&quot;Company Generated&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Organic&quot;),&quot;Organic&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Competitor&quot;),&quot;Competitor&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Turnover&quot;),&quot;Turnover&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Referral&quot;),&quot;Referral&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Competitor Borderline&quot;),&quot;Competitor Borderline&quot;, NULL)+ BR()+ 
IF(INCLUDES(Opportunity__r.Accepted_As__c, &quot;Organic Borderline&quot;),&quot;Organic Borderline&quot;, NULL)+ BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>CASESAFEID(Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Service_Territory__c</fullName>
        <formula>Account__r.Service_Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Service Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Go_Live_Completed_Date_field__c</fullName>
        <label>Add: Go Live Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_Scheduled_Go_Live_Date__c</fullName>
        <label>Add: Scheduled Go Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_Scheduled_Install_Date__c</fullName>
        <label>Add: Scheduled Install Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_Swap_Reconfigure_Status__c</fullName>
        <label>Add/Swap/Reconfigure Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Regional Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Machine Assignment</fullName>
                </value>
                <value>
                    <fullName>Pending Executive Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Field Assessment</fullName>
                </value>
                <value>
                    <fullName>Field Assessment In Process</fullName>
                </value>
                <value>
                    <fullName>Pending Asset Allocation</fullName>
                </value>
                <value>
                    <fullName>Pending Submission to SGI</fullName>
                </value>
                <value>
                    <fullName>Pending SGI Approval</fullName>
                </value>
                <value>
                    <fullName>Pending SGI Schedule Date</fullName>
                </value>
                <value>
                    <fullName>Pending Scheduled On-Site Date</fullName>
                </value>
                <value>
                    <fullName>Pending Go-Live</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Project Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approval Rejected - Regional Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Electrical_Work_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Electrical Work Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_VGTs_Calc__c</fullName>
        <formula>Current_VGT_Count__c + Request_of_VGTs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional VGTs Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Request__c</fullName>
        <formula>TODAY()- ( Project_Submitted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Expiration_Date__c</fullName>
        <formula>Account__r.Agreement_Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Project_Status_Changed__c</fullName>
        <label>Alert: Project Status Changed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Amusement_Operator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects as Amusement Operator</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusement Operator (account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Amusement Operators</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusement_Region__c</fullName>
        <label>Amusement Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Amusement_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_Submitted_Entry_Date__c</fullName>
        <label>App Submitted Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Paid__c</fullName>
        <label>Application Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <label>Application Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Processed_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Processed_by__c</fullName>
        <label>Application Processed by (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Submitted by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Web_ID__c</fullName>
        <label>Application Web ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Withdrawn_Date__c</fullName>
        <label>Application Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>LicenseApplication__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assets_Allocated__c</fullName>
        <label>Assets Allocated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_RM__c</fullName>
        <formula>Account__r.Relationship_Manager__r.FirstName &amp;&apos; &apos;&amp;Account__r.Relationship_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendant_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendant Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Acreage__c</fullName>
        <label>Available Acreage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Gallons__c</fullName>
        <label>Average Monthly Gallons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changes_Requested__c</fullName>
        <inlineHelpText>Please list the changes you would like to the existing proposed equipment.</inlineHelpText>
        <label>Changes Requested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Region__c</fullName>
        <label>Collection Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collection_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Additional_Terminals__c</fullName>
        <label>Committed Additional Terminals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Contract_Expiration_Date__c</fullName>
        <label>Competitor Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_SGI_Removal_Confirmed__c</fullName>
        <label>Competitor SGI Removal Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_TO__c</fullName>
        <formula>Account__r.Competitor_TO__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor TO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Termination_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Termination Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Transition_Story__c</fullName>
        <label>Competitor Transition Story</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Go_Live__c</fullName>
        <label>Municipality Go Live Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Notes__c</fullName>
        <label>Compliance Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierge_Service_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierge Service Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concierge_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierge Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_TO_Pull__c</fullName>
        <label>Confirmed TO Pull</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <label>Contractor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Phone__c</fullName>
        <label>Contractor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Corporate_Detail_Report_is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Detail Report is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Field_Assessements__c</fullName>
        <label>Count of Field Assessments</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Account__r.County_LU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Acreage__c</fullName>
        <label>Current Acreage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Competitor__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Account__r.Competitor_TO__c,  Account__r.Competitor_TO__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_VGT_Count__c</fullName>
        <formula>Account__r.Current_VGT_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Spacers__c</fullName>
        <label>Custom Spacers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Gaming Spacer</fullName>
                </value>
                <value>
                    <fullName>MLP Steel</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOJ_Expiration_Date__c</fullName>
        <label>DOJ Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOJ_File_Number__c</fullName>
        <label>DOJ File Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOJ_Request_Sent_Date__c</fullName>
        <label>DOJ Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Letter_Sent_to_Competitor__c</fullName>
        <label>Date 2nd Letter Sent to Competitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Asset_Allocation__c</fullName>
        <label>Asset Allocation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_A_W_R_Status_Change__c</fullName>
        <description>When the Add/Swap Reconfigure Status was last changed. Used to calculate the number of days in current Status. Populated by automation</description>
        <label>Date of Last A/S/R Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Project_Status_Change__c</fullName>
        <description>When Project Status was last changed. Used to calculate the number of days in current Status. Populated by automation</description>
        <label>Date of Last Project Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Status_Change__c</fullName>
        <description>When Status was last changed. Used to calculate the number of days in current Status. Populated by automation</description>
        <label>Date of Last Status Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>today()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_A_S_R_Status__c</fullName>
        <formula>TODAY()- Date_of_Last_A_W_R_Status_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current A/S/R Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Project_Status__c</fullName>
        <formula>TODAY()-  Date_of_Last_Project_Status_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Project Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Status__c</fullName>
        <formula>TODAY()- Date_of_Last_Status_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Go_Live__c</fullName>
        <formula>Competitor_Contract_Expiration_Date__c - TODAY()</formula>
        <inlineHelpText>Countdown from Today to expected Go Live Date</inlineHelpText>
        <label>Days to Go Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_Expiration__c</fullName>
        <formula>Competitor_Contract_Expiration_Date__c  - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until TUA Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Frequency__c</fullName>
        <label>Deposit Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Driver_s_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver&apos;s License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_s_License_signature_matches_TUA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Driver&apos;s License signature matches TUA signature</description>
        <inlineHelpText>Driver&apos;s License signature matches TUA signature</inlineHelpText>
        <label>Driver&apos;s License signature matches TUA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Layout_Inspection_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical/Layout Inspection Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Scheduled_Date__c</fullName>
        <formula>Field_Assessment__r.Electrical_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Work_Status__c</fullName>
        <formula>TEXT(Field_Assessment__r.Electrical_Work_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Work Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Notes__c</fullName>
        <label>Eligibility Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Liquor_License_Availability__c</fullName>
        <label>Est. Liquor License Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Builout_Completion_Date__c</fullName>
        <label>Estimated Buildout Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_State_Liquor_License_Issued__c</fullName>
        <label>Estimated State Liquor License Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Approval__c</fullName>
        <inlineHelpText>Used for Sales Operations Process Approval</inlineHelpText>
        <label>Evaluation Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FEIN_Number__c</fullName>
        <label>FEIN Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldAssessmentCompleted__c</fullName>
        <label>Field Assessment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Assigned_Date__c</fullName>
        <formula>Field_Assessment__r.Field_Assessment_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Assessment Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Requested__c</fullName>
        <label>Field Assessment Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Scheduled_Date__c</fullName>
        <formula>Field_Assessment__r.Field_Assessment_Scheduled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Assessment Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Scheduled__c</fullName>
        <label>Field Assessment Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Assessment_Status__c</fullName>
        <formula>TEXT(Field_Assessment__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Assessment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Assessment</label>
        <referenceTo>Field_Assessment__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Approved_Materials_Movement__c</fullName>
        <label>Final Approved Materials Movement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fingerprinting_Complete_Date__c</fullName>
        <label>Fingerprinting Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fingerprinting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fingerprinting Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gaming_Area_Assets__c</fullName>
        <label>Gaming Area Assets</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Regional Approval</fullName>
                </value>
                <value>
                    <fullName>Parts Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Pending Location Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_License_Copy_Received_Date__c</fullName>
        <label>Gaming License Copy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Denied_Date__c</fullName>
        <label>Gaming License Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Denied_Renewal_Date__c</fullName>
        <label>Gaming License Denied Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Exp_Date__c</fullName>
        <label>Gaming License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Expiration_Month__c</fullName>
        <label>Gaming License Expiration Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Original_Issue_Date__c</fullName>
        <label>Gaming License Original Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Renewal_Date__c</fullName>
        <label>Gaming License Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gaming_License_Revoked_Date__c</fullName>
        <label>Gaming License Revoked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Go_Live_Binder_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Go-Live Binder Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_Live_Probability__c</fullName>
        <formula>CASE(RecordType.Name, &quot;Competitor&quot;, 

IF(OR(ISPICKVAL(Stage_Indicator__c, &quot;Counsel Review – On Hold&quot;), ISPICKVAL(Stage_Indicator__c, &quot;Incomplete Gaming Area&quot;), ISPICKVAL(Stage_Indicator__c, &quot;Petition&quot;)), 0.5,
IF(OR(AND(Days_until_Expiration__c &lt; -7, ISBLANK( Account__r.Accel_VGT_Live_Date__c)), AND( NOT(ISBLANK(TEXT(Stage_Indicator__c))), NOT(ISPICKVAL(Stage_Indicator__c, &quot;Location signed an extension&quot;)), ISBLANK( Account__r.Accel_VGT_Live_Date__c))), 0,
IF(OR(ISPICKVAL(Project_Status__c, &quot;Live&quot;),ISPICKVAL(Project_Status__c, &quot;Closure&quot;), NOT(ISBLANK( Account__r.Accel_VGT_Live_Date__c ))), 1, 0.8))),

&quot;Organic&quot;,

IF(NOT(ISBLANK( Account__r.Accel_VGT_Live_Date__c )), 1, 
IF(OR(ISPICKVAL(Stage_Indicator__c, &quot;Counsel Review – On Hold&quot;), ISPICKVAL(Stage_Indicator__c, &quot;Incomplete Gaming Area&quot;), ISPICKVAL(Stage_Indicator__c, &quot;Petition&quot;)), 0.5, 
IF(NOT(ISBLANK(TEXT( Stage_Indicator__c ))), 0, 
IF(NOT(ISBLANK( Account__r.Active_IGB_Gaming_License__r.License_Original_Issue_Date__c )), 0.95, 
IF(NOT(ISBLANK( Application_Submitted_Date__c )), 0.85, 
IF(OR(ISPICKVAL( Liquor_License_Status__c , &quot;Combination&quot;), ISPICKVAL( Liquor_License_Status__c , &quot;On Premise&quot;)), 0.7, 
IF(NOT(ISBLANK( Local_Liquor_License_Achieved__c )), 0.5, 0.3)
)
)
)
)
)
)

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go Live Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Go_Live_Scheduled_Date__c</fullName>
        <label>Scheduled Go-Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPD_TTM__c</fullName>
        <formula>Account__r.HPD_TTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD TTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>